src/test/deca/context/invalid/sansObjet/BadAssignWithMult.deca
{
 float a = 2020.0;
 int x = a * 20;
}